[package]
name = "color-wheel-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }
color-wheel-lib = { path = "../color-wheel-lib" }
image = { version = "0.24.6", features = ["png"], default-features = false }

[dev-dependencies]
